fix scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -225,28 +225,18 @@ ol {
   color: #545050;
 }
 
+/*.content__list::-webkit-scrollbar {*/
+/*  width: 0.26vw;*/
+/*}*/
+
 .content__list {
   position: relative;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   overflow-x: auto;
-}
-
-@supports selector(-webkit-scrollbar) {
-  ::-webkit-scrollbar {
-    width: 0.26vw;
-}
-
-
-.content__list::-webkit-scrollbar-thumb {
-  border-radius: 10px 0 0 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-  background: #79817f;
-}
-
-.content__list::-moz-progress-bar {
-  background: white;
+  scrollbar-width: thin;
+  scrollbar-gutter: stable;
 }
 
 .content__list-item {
